--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,32 +1,10 @@
-.container{
-    border-radius: 5px;
-    background-color: aliceblue;
-    padding: 20px;
-    margin: 20px;
+h1{
+    color: burlywood;
 }
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
-
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 16px;
-  margin-bottom: 16px;
-  resize: vertical;
+body{
+    background-color: turquoise;
 }
-
-input[type=submit] {
-  background-color: #4CAF50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #7bac0a;
+img{
+    width: 200px;
+    height: 200px;
 }
