--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,10 +1,23 @@
-h1{
-    color: burlywood;
-}
 body{
-    background-color: turquoise;
+    margin: 0%;
 }
 img{
     width: 200px;
     height: 200px;
 }
+div{
+    background-color: lightblue;
+    padding: 20px;
+}
+.topnav{
+    background-color: royalblue;
+  overflow: hidden;
+}
+.topnav a {
+    float: right;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+  }
