--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,12 +19,19 @@
 
 }
 #navbar{
-    background-color: cyan;
+    background-color: none;
     overflow: hidden;
-    position: relative;
+    padding-left: 70%;
+    padding-top: 50px;
 }
 #navbar a{
-    float: right;
-    padding: 14px;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 20px;
 
+}
+.profile{
+    width: 200px;
+    height: 200px;
+    padding-top: 40px;
 }
