--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,15 +7,15 @@
     padding: 20px;
 }
 .middle-container{
-    background-color: red;
-    width: 200px;
-    height: 200px;
+    background-color: lightcyan;
+    padding: 0%;
+    margin-top: 1%;
 
 }
 .bottom-container{
     background-color: blue;
-    width: 200px;
-    height: 200px;
+    padding: 20%;
+    margin-top: 1%;
 
 }
 #navbar{
@@ -51,4 +51,28 @@
     margin: 60px auto 70px auto;
     font-family: fantasy;
 }
+.mid-container-about{
+    width: 50%;
+    height: 50%;
+    background-color: none;
+    position: absolute;
+    padding: 1%;
+    margin-right: 10%;
 
+}
+.skill-hobbies{
+    background-color: none;
+    width: 50%;
+    margin-left: 50%;
+}
+.skills-row{
+    background-color: none;
+    padding: 20px;
+    margin-left: 30px;
+    
+}
+.hobbies-row{
+    background-color: none;
+    padding: 24px;
+    margin-left: 30px;
+}
