--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -78,7 +78,7 @@
     padding-left: 200px;
 }
 .project-1{
-    background-color: lime;
+    background-color: none;
     width: 300px;
     height: 300px;
     margin-left: 0px;
@@ -89,7 +89,7 @@
     vertical-align: top;
 }
 .project-2{
-    background-color: magenta;
+    background-color: none;
     width: 300px;
     height: 300px;
     margin-left: 40px;
@@ -100,7 +100,7 @@
     
 }
 .project-3{
-    background-color: mediumturquoise;
+    background-color: none;
     width: 300px;
     height: 300px;
     margin-left: 40px;
