--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,16 @@
 .body{
-    margin: 0;
+    margin: 10px;
     font-family: fantasy;
 }
 .top-container{
     background-color: lightcyan;
     padding: 20px;
-    margin-top: 1%;
+    margin-top: 0%;
 }
 .middle-container{
-    background-color: lightcyan;
+    background-color: lightsteelblue;
     padding: 0%;
-    margin-top: 1%;
+    margin-top: 0%;
 
 }
 .bottom-container{
@@ -123,11 +123,39 @@
     width: 300px;
     height: 200px;
 }
-.footer{
+
+.social{
     background-color: lightcyan;
     margin-top: 1%;
 }
 hr{
     padding: 20px;
     border: none;
+}
+.social{
+	background-color: #d4edef;
+	text-align: center;
+	margin: 1px 0px 30px 0px;
+}
+ul.social{
+	list-style-type: none
+}
+li.social{
+	display: inline-block;
+}
+li.social a {
+    display:block;
+    color: #261074fc;
+    font-size: 25px;
+    text-align: center;
+    padding: 50px 10px 50px 10px;
+    margin-right: 30px;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+li.footer a:hover {
+    /*background-color: #00a3b5;*/
+     color: white;
+     font-size: 30px;
 }
