--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,7 @@
     background-color:#F8F5F1;
     padding: 20px;
     margin-top: 0%;
+    position: relative;
 }
 .middle-container{
     background-color: lightsteelblue;
@@ -45,6 +46,14 @@
     left: 100px;
 }
 
+.top-image{
+    background-color: none;
+    width: 100px;
+    height: 100px;
+    position: relative;
+    left: 800px;
+}
+
 .pf-img{
     width: 25%;
     padding: 15px;
@@ -66,10 +75,10 @@
     width: 386px;
     height: 300px;
     background-color: none;
-    position: absolute;
+    position: relative;
     padding: 12px;
     left: 450px;
-    bottom: 200px;
+    bottom: 100px;
 
 }
 .skill-hobbies{
